--- a/pages/russell.html
+++ b/pages/russell.html
@@ -67,7 +67,7 @@ permalink: /russell.html
     <br>
     <a href="https://aweymo.github.io/losttacoma/browse.html#5912 N WATERFRONT DR. TACOMA">Point Defiance Pavilion</a></p>
     <br>
-    <p>Ambrose James (sometimes Janvier) Russell was born in Trivandrum, India to a Scottish missionary. Russell studied at the University of Glasgow and the Ecole des Beaux Arts before coming to America in 1884. In 1895, Russell was the Director of the Watercolor Sketch Club, which displayed work at the Ferry Museum (now the Washington State Historical Society) and curated work from future partner Everett Phipps Babcock. In 1896, Russell was appointed a Professor of Architecture at the University of Washington in Seattle.</p>
+    <p>Ambrose James (sometimes Janvier) Russell was born in Trivandrum, India to a Scottish missionary and an English mother who died early in his life. Russell studied at the University of Glasgow and the Ecole des Beaux Arts before coming to America in 1884. In 1895, Russell was the Director of the Watercolor Sketch Club, which displayed work at the Ferry Museum (now the Washington State Historical Society) and curated work from future partner Everett Phipps Babcock. In 1896, Russell was appointed as a professor of architecture at the University of Washington in Seattle.</p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
@@ -77,7 +77,7 @@ permalink: /russell.html
       
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <p>Russell formed partnerships with Albert Walter Spaulding and Frederick Henry Heath in 1901, Everett Phipps Babcock in 1905, H.G. Ripley in 1908, Walter E. Rice and Irving Harlan Thomas in 1908 and finally Gaston Lance, A. Gordon Lumm and Irwin Muri in 1930. Russell was a member of the American Institute of Architects, Secretary of the Tacoma Society of Architects and a Mason. When Russell passed, three of his Pallbearers were architects featured in this collection: Gaston Lance, Ernest Mock and Earl N. Dugan.</p>
+    <p>Russell formed partnerships with Albert Walter Spaulding and Frederick Henry Heath in 1901, Everett Phipps Babcock in 1905, H.G. Ripley in 1908, Walter E. Rice and Irving Harlan Thomas in 1908 and finally Gaston Lance, A. Gordon Lumm and Irwin Muri in 1930. Russell was a member of the American Institute of Architects, Secretary of the Tacoma Society of Architects and a Mason. When Russell passed, three of his pallbearers were architects featured in this collection: Gaston Lance, Ernest Mock and Earl N. Dugan.</p>
     <br>
     <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/12536/rec/20">The Rust Mansion</a>, 
         <br>
