--- a/pages/bachelor.html
+++ b/pages/bachelor.html
@@ -60,7 +60,7 @@ permalink: /bachelor.html
     <br>
     <p>The architect that drew up the plans for the Mission Theater in 1924 is unclear. There is an Arthur J. Bachelor that was primarily active in Tacoma's photography community, but was also an active member of the Kiwanis Club, Tacoma Executive Association and the Tacoma Yacht Club. That said, the most thorough profile of Bachelor in the 1954 Tacoma News Tribune reveals nothing about amateur draftsmanship.</p>
     <br>
-    <sub>Sources: “Tribune (Published as THE TACOMA NEWS TRIBUNE) - June 3, 1954 - Page 17,”</sub>
+    <sub>Sources: “Tribune (Published as THE TACOMA NEWS TRIBUNE) - June 3, 1954 - Page 17”</sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
