--- a/pages/bassindale.html
+++ b/pages/bassindale.html
@@ -73,7 +73,7 @@ permalink: /bassindale.html
   <div class="column left" style="background-color:#FFFFFF;">
     <p>Other Work: 
       <br>
-      <a href="https://prabook.com/web/show-photo.jpg?id=1499465&cache=false">Lowry Hotel, St. Paul, ca. 1920</a>, 
+      <a href="https://prabook.com/web/show-photo.jpg?id=1499465&cache=false">Lowry Hotel, St. Paul, ca. 1920</a>
       <br>
       <a href="https://www.startribune.com/why-did-minneapolis-tear-down-its-train-station-great-northern-depot/600013884/">Great Northern Depot, Minneapolis MN, 1914 (under Charles Frost)</a> </p>
       <br>
