--- a/pages/couchot.html
+++ b/pages/couchot.html
@@ -65,9 +65,9 @@ permalink: /couchot.html
     <br>
     <p>Other Work: 
     <br>
-    <a href="https://calisphere.org/item/48d352f713eef7397040a2d51280c2cc/">Broadway Arcade Building, Downtown, Los Angeles, CA (1922-1924)</a>,
+    <a href="https://calisphere.org/item/48d352f713eef7397040a2d51280c2cc/">Broadway Arcade Building, Downtown, Los Angeles, CA (1922-1924)</a>
     <br>
-    <a href="https://sksre.com/project/888-brannan/">888 Brannan Street Factory, San Francisco, CA</a>, 
+    <a href="https://sksre.com/project/888-brannan/">888 Brannan Street Factory, San Francisco, CA</a> 
     <br>
     <a href="https://ohp.parks.ca.gov/pages/1067/files/CA_Alameda_Oakland Auditorium_DRAFT.pdf">Oakland Auditorium, Oakland, CA, 1913-1915</a> </p>
     <br>
