--- a/pages/dugan.html
+++ b/pages/dugan.html
@@ -91,7 +91,7 @@ permalink: /dugan.html
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/1567/rec/3"> Wright, Annie, Seminary #2, Tacoma, WA (1923-1924)</a> </p>
     <br>
     <br>
-    <sub>Sources: “PCAD - Earl Nathaniel Dugan.”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - March 30, 1912 - Page 5,”, The Modern Cemetery, 1920., “Tribune (Published as THE NEWS TRIBUNE) - February 12, 1921 - Page 8,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”. “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 28, 1932 - Page 9,”</sub>
+    <sub>Sources: “PCAD - Earl Nathaniel Dugan.”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - March 30, 1912 - Page 5,”, The Modern Cemetery, 1920., “Tribune (Published as THE NEWS TRIBUNE) - February 12, 1921 - Page 8,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”. “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 28, 1932 - Page 9”</sub>
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
