--- a/pages/ekvall.html
+++ b/pages/ekvall.html
@@ -63,7 +63,7 @@ permalink: /ekvall.html
     <br>
     <p>Lost Tacoma Locations: 
     <br>
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24 BROADWAY, TACOMA">City Hall</a>, 
+    <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24 BROADWAY, TACOMA">City Hall</a> 
     <br>
     <a href="https://aweymo.github.io/losttacoma/browse.html#502 N YAKIMA AVE, TACOMA">Apartment for John Buffelen</a> </p>
     <br>
@@ -71,13 +71,13 @@ permalink: /ekvall.html
     <br>
     <p>Other Work: 
       <br>
-      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/16339/rec/5">Evelyn Apartments</a>, 
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/16339/rec/5">Evelyn Apartments</a>
       <br>
-      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14379/rec/3">Roosevelt Apartments</a>, 
+      <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14379/rec/3">Roosevelt Apartments</a>
       <br>
       <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/6551/rec/2">The Luaun Apartments</a> </p>
     <br>
-    <sub>Sources: “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - December 9, 1928 - Page 36,”, “Tribune (Published as Tacoma News Tribune) - March 12, 1974 - Page 15,”, “Tribune (Published as THE NEWS TRIBUNE) - May 20, 1959 - Page 38,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - February 5, 1949 - Page 10,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - July 10, 1925 - Page 6,”</sub>
+    <sub>Sources: “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - December 9, 1928 - Page 36,”, “Tribune (Published as Tacoma News Tribune) - March 12, 1974 - Page 15,”, “Tribune (Published as THE NEWS TRIBUNE) - May 20, 1959 - Page 38,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - February 5, 1949 - Page 10,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - July 10, 1925 - Page 6”</sub>
     <br>
     <br>
     </div>
