--- a/pages/griffin.html
+++ b/pages/griffin.html
@@ -61,7 +61,9 @@ permalink: /griffin.html
     <br>
     <p>Lost Tacoma Locations: 
     <br>  
-    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>, <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt099">Roosevelt School</a>
+    <br>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Arlington Elementary School Addition</a></p>
     <br>
     <p>Jack Griffin was born in Los Angeles, CA and graduated from the University of Santa Clara. After moving to Seattle, Griffin formed a partnership with Irwin H. Hill, Arnott Woodroofe and later with Ernest T. Mock. When Griffin left the partnership in 1924, he would work extensively in the Lewis County area, creating courthouses, schools, churches and theaters with distinctive Spanish Colonial Revival and Mission Revival Style influences.</p>
     <br>
@@ -73,7 +75,7 @@ permalink: /griffin.html
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/36432/rec/2">The Salvation Army</a> </p>
     <br>
-    <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Jack D. Griffin.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - August 31, 1927 - Page 7,” </sub>
+    <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Jack D. Griffin.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - August 31, 1927 - Page 7” </sub>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/search/index.html?q=griffin"><img src="https://aweymo.github.io/losttacoma/objects/p_griffin.jpeg" alt="Jack D. Griffin" style="max-width:100%;"></a>
