--- a/pages/lance.html
+++ b/pages/lance.html
@@ -65,9 +65,9 @@ permalink: /lance.html
     <br>
     <p>Other Work: 
     <br>  
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/13548/rec/103">Empress Theater</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/13548/rec/103">Empress Theater</a> 
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9785/rec/127">Sundgren House</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/9785/rec/127">Sundgren House</a> 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/11408/rec/154">Kress Drive In</a> </p>
     <br>
@@ -84,7 +84,7 @@ permalink: /lance.html
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
     <br>
-    <sub>Sources: College Park Historic District National Register of Historic Places Nomination - Page 13, Washington State Department of Archaeology & Historic Preservation (DAHP).“, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - June 7, 1944 - Page 12,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 11, 1936 - Page 2,”, “Tribune (Published as The Tacoma Sunday Ledger SUNDAY NEWS TRIBUNE) - March 27, 1949 - Page 9,”</sub>
+    <sub>Sources: College Park Historic District National Register of Historic Places Nomination - Page 13, Washington State Department of Archaeology & Historic Preservation (DAHP).“, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - June 7, 1944 - Page 12,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 11, 1936 - Page 2,”, “Tribune (Published as The Tacoma Sunday Ledger SUNDAY NEWS TRIBUNE) - March 27, 1949 - Page 9”</sub>
     <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
