--- a/pages/mallis.html
+++ b/pages/mallis.html
@@ -69,7 +69,7 @@ permalink: /mallis.html
     <br>
     <a href="https://cdm16118.contentdm.oclc.org/digital/collection/p15015coll4/id/3028/rec/2">Nathan Eckstein Middle School</a></p>
     <br>
-    <sub>Sources: “PCAD - William Mallis.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - July 20, 1938 - Page 7,”</sub>
+    <sub>Sources: “PCAD - William Mallis.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - July 20, 1938 - Page 7”</sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
