--- a/pages/mock.html
+++ b/pages/mock.html
@@ -71,9 +71,9 @@ permalink: /mock.html
     <br>
     <p>Other Work: 
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/847/rec/30">Fire Station No. 12</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/847/rec/30">Fire Station No. 12</a> 
     <br>
-    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20159/rec/40">Foster & Kleiser Investment Co.</a>, 
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20159/rec/40">Foster & Kleiser Investment Co.</a> 
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20233/rec/54">Tillicum Toy Co.</a> </p>
     <br>
