--- a/pages/rowlands.html
+++ b/pages/rowlands.html
@@ -58,7 +58,7 @@ permalink: /rowlands.html
     <br>
     <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/item.html?id=lt051">Fireboat for the City of Tacoma</a></p>
     <br>
-    <p>Thomas Mck. Rowlands was a professor of naval architecture at the University of Washington. In addition to education and commission work for the City of Tacoma, Rowlands would charter his yacht Bettybelle for trips around Lake Washington, British Columbia and Alaska.</p>
+    <p>Thomas Mck. Rowlands was a professor of naval architecture at the University of Washington. In addition to education and commission work for the City of Tacoma, Rowlands would charter his yacht <i>Bettybelle</i> for trips around Lake Washington, British Columbia and Alaska.</p>
     <br>
     <sub>Sources: “Seattle Daily Times (Published as THE SEATTLE DAILY TIMES) - June 9, 1936 - Page 16,”, "The Seattle Star (Seattle, Washington) ·  Thu, Apr 29, 1937 ·  Page 17", The Log. Miller Freeman Publications, 1954.</sub>
     <br>
