--- a/pages/russell.html
+++ b/pages/russell.html
@@ -79,13 +79,13 @@ permalink: /russell.html
   <div class="column left" style="background-color:#FFFFFF;">
     <p>Russell formed partnerships with Albert Walter Spaulding and Frederick Henry Heath in 1901, Everett Phipps Babcock in 1905, H.G. Ripley in 1908, Walter E. Rice and Irving Harlan Thomas in 1908 and finally Gaston Lance, A. Gordon Lumm and Irwin Muri in 1930. Russell was a member of the American Institute of Architects, Secretary of the Tacoma Society of Architects and a Mason. When Russell passed, three of his pallbearers were architects featured in this collection: Gaston Lance, Ernest Mock and Earl N. Dugan.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/12536/rec/20">The Rust Mansion</a>, 
+    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/12536/rec/20">The Rust Mansion</a> 
         <br>
-        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/30267/rec/26">Rhodes Department Store</a>, 
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/30267/rec/26">Rhodes Department Store</a> 
         <br>
-        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14132/rec/4">James & Elizabeth McCormack Houseg</a> </p>
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/14132/rec/4">James & Elizabeth McCormack House</a> </p>
         <br>
-        <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Ambrose J. Russell.”, “Our Tacoma Artists. Reception at the Ferry Museum - Tacoma Daily News - July 5, 1895 - Page [3],”, “PCAD - Ambrose James Russell.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 19, 1938 - Page 1,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 11, 1936 - Page 2,”“Tribune (Published as The Tacoma Sunday Ledger AND THE TACOMA NEWS TRIBUNE) - March 20, 1938 - Page 15,”, “Tribune (Published as The Tacoma Sunday Ledger AND THE TACOMA NEWS TRIBUNE) - October 17, 1937 - Page 28,”</sub>
+        <sub>Sources: Washington State Department of Archaeology & Historic Preservation (DAHP). “Ambrose J. Russell.”, “Our Tacoma Artists. Reception at the Ferry Museum - Tacoma Daily News - July 5, 1895 - Page [3],”, “PCAD - Ambrose James Russell.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - March 19, 1938 - Page 1,”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - November 11, 1936 - Page 2,”“Tribune (Published as The Tacoma Sunday Ledger AND THE TACOMA NEWS TRIBUNE) - March 20, 1938 - Page 15,”, “Tribune (Published as The Tacoma Sunday Ledger AND THE TACOMA NEWS TRIBUNE) - October 17, 1937 - Page 28”</sub>
         <br>
   </div>
   <div class="column right" style="background-color:#FFFFFF;">
