--- a/pages/sutton.html
+++ b/pages/sutton.html
@@ -58,6 +58,7 @@ permalink: /sutton.html
     <br>
     <em>1867-1923</em>
     <br>
+    <br>
     <p>Lost Tacoma Locations: 
     <br>  
     <a href="https://aweymo.github.io/losttacoma/browse.html#742-50 PACIFIC AVE, TACOMA">Donnelly Site Hotel</a>
@@ -80,9 +81,9 @@ permalink: /sutton.html
   <div class="column left" style="background-color:#FFFFFF;">
     <p>Other Work: 
         <br>    
-        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/3986/rec/2">Jonathan Smith Building</a>, 
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/3986/rec/2">Jonathan Smith Building</a> 
         <br>
-        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/11105/rec/8">Corydon Wagner House</a>, 
+        <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/11105/rec/8">Corydon Wagner House</a> 
         <br>
         <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/6242/rec/16">Albert K. Hiscock House</a> </p>
         <br>
