--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -75,7 +75,7 @@ permalink: /whitney.html
     <br>
     <a href="https://npgallery.nps.gov/GetAsset/9a91cf62-01a2-4c48-888b-3ee8deddbc6e">Hoquiam Masonic Temple</a> </p>
     <br>
-    <sub>Sources: “PCAD - Harrison Allen Whitney.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24,”</sub>
+    <sub>Sources: “PCAD - Harrison Allen Whitney.”, “Tribune (Published as THE TACOMA NEWS TRIBUNE) - September 19, 1922 - Page 24”</sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
