--- a/pages/whitney.html
+++ b/pages/whitney.html
@@ -69,7 +69,9 @@ permalink: /whitney.html
     <br>
     <p>Harrison Allen Whitney was born in Osage, Iowa and graduated from the Massachusetts Institute of Technology in architecture. After working in Boston and Chicago, Whitney moved to Portland, Oregon as head draftsman for Whidden & Lewis. This position led to Whitney contributing designs for the Lewis and Clark Exposition and the Multnomah County Courthouse. In 1912, Whitney partnered with Albert Sutton and would retain Sutton's name in his architectural firm long after his death in 1923.</p>
     <br>
-    <p>Other Work: <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20483/rec/10">Annie Wright Seminary</a>
+    <p>Other Work: 
+    <br>  
+    <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll1/id/20483/rec/10">Annie Wright Seminary</a>
     <br>
     <a href="https://cdm17061.contentdm.oclc.org/digital/collection/p17061coll21/id/18848/rec/43">National Bank of Washington</a> 
     <br>
