--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -54,32 +54,31 @@ permalink: /apartment.html
 
 <div class="row">
   <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
+    <h4><p><b>Apartment Building for John Buffelen</b></p></h4>
     <br>
-    <em>1874-1928</em>
+    <em>April 30, 1931</em>
     <br>
     <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
+    <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE,%20TACOMA">502 N YAKIMA AVE, TACOMA</a></p>
     <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
+    <p>Architect George L. Ekvall was born in Tacoma, Washington in 1896 and certified as an architect in 1925. Ekvall was a member of the American Institute of Architects, the Olympia Lions Club and the Olympia Art League. Notable architectural work Ekvall was associated with was the Holy Rosary Catholic Church in Tacoma, the Federation Forest monument to the Washington State Federation of Women's Clubs and the Medical-Dental Tower, a proposed but never constructed skyscraper. John Buffelen was born in the Netherlands in 1862 and came first to Milwaukie and then to Tacoma while working in the lumber industry. Buffelen became a central figure in industrial lumber manufacturing in Tacoma's tide flats area, with his corporations the Buffelen Lumber & Manufacturing Co., the Buffelen-Hubert Furniture Co. and the American Wood Pipe Co. in addition to constructing several apartment buildings in the city. Buffelen attracted a good deal of press later in life from funding multiple failed attempts to cross the Pacific by plane. Series comprises four blueprints for a proposed apartment building for industrialist John Buffelen designed by Tacoma area architect George L. Ekvall. The stucco building is three stories with a basement, attic space and spanish tile roof. The building was located at the west corner of 5th and Yakima Street, which was located caddy corner from the Buffelen residence at 509 North Yakima St. currently occupied by the Vista Palms Apartments.</p>
     <br>
-    <p>Other Work: 
+    <p>Technical Drawings: 
     <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt001">Sheet 1</a>
     <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt002">Sheet 2</a> 
     <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt003">Sheet 2E</a> 
     <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
+    <a href="https://aweymo.github.io/losttacoma/item.html?id=lt004">Sheet 3</a> 
+    </p>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/browse.html#502%20N%20YAKIMA%20AVE,%20TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/buffelenapartment_01.jpeg" alt="Apartment Building for John Buffelen" style="max-width:100%;"></a>
     <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
+    <sub>Apartment Building for John Buffelen, Sheet 1 </sub>
   </div>
 </div>
   
