--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -68,9 +68,7 @@ permalink: /apartment.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a> href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_buffelen.jpeg" alt="John Buffelen" style="max-width:100%;"></a>
-    <br>
-    <sub>Courtesy Washington State Department of Architectural Licensing</sub>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_buffelen.jpeg" alt="John Buffelen" style="max-width:100%;"></a>
     <br>
   </div>
   <div class="column left" style="background-color:#FFFFFF;">
@@ -89,7 +87,7 @@ permalink: /apartment.html
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
-    <a> href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="max-width:100%;"></a>
+    <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="max-width:100%;"></a>
     <br>
     <sub>Courtesy Washington State Department of Architectural Licensing</sub>
     <br>
