--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -63,16 +63,18 @@ permalink: /apartment.html
     <br>
     John Buffelen was born in the Netherlands in 1862 and came first to Milwaukie and then to Tacoma while working in the lumber industry. Buffelen became a central figure in industrial lumber manufacturing in Tacoma's tide flats area, with his corporations the Buffelen Lumber & Manufacturing Co., the Buffelen-Hubert Furniture Co. and the American Wood Pipe Co. in addition to constructing several apartment buildings in the city. Buffelen attracted a good deal of press later in life from funding multiple failed attempts to cross the Pacific by plane. 
     <br>
-    <br>
-    Series comprises four blueprints for a proposed apartment building for industrialist John Buffelen designed by Tacoma area architect George L. Ekvall. The stucco building is three stories with a basement, attic space and spanish tile roof. The building was located at the west corner of 5th and Yakima Street, which was located caddy corner from the Buffelen residence at 509 North Yakima St. currently occupied by the Vista Palms Apartments.</p>
+    <sub>THE TACOMA NEWS TRIBUNE - July 10, 1930 - Page 1. p. 1.
+    </sub>
     <br>
     </div>
   <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/search/index.html?q=ekvall"><img src="https://aweymo.github.io/losttacoma/objects/p_buffelen.jpeg" alt="John Buffelen" style="max-width:100%;"></a>
     <br>
+    <sub>The Tacoma News Tribune - July 10, 1930 - Page 1. p. 1.</sub>
+    <br>
   </div>
   <div class="column left" style="background-color:#FFFFFF;">
-    <p>Architect George L. Ekvall was born in Tacoma, Washington in 1896 and certified as an architect in 1925. Ekvall was a member of the American Institute of Architects, the Olympia Lions Club and the Olympia Art League. Notable architectural work Ekvall was associated with was the Holy Rosary Catholic Church in Tacoma, the Federation Forest monument to the Washington State Federation of Women's Clubs and the Medical-Dental Tower, a proposed but never constructed skyscraper. 
+    <p>Series comprises four blueprints for a proposed apartment building for industrialist John Buffelen designed by Tacoma area architect George L. Ekvall. The stucco building is three stories with a basement, attic space and spanish tile roof. The building was located at the west corner of 5th and Yakima Street, which was located caddy corner from the Buffelen residence at 509 North Yakima St. currently occupied by the Vista Palms Apartments.</p>
     <br>  
     <p>Technical Drawings: 
     <br>
