--- a/pages/apartment.html
+++ b/pages/apartment.html
@@ -12,7 +12,7 @@ permalink: /apartment.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
