--- a/pages/abattoir.html
+++ b/pages/abattoir.html
@@ -12,7 +12,7 @@ permalink: /abattoir.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -68,9 +68,9 @@ permalink: /abattoir.html
     <div class="column right" style="background-color:#FFFFFF;">
     <a href="https://aweymo.github.io/losttacoma/browse.html#Henschien%20Everds%20%26%20Crombie"><img src="https://aweymo.github.io/losttacoma/objects/ ext_carstens" alt="Carstens Packing Company" style="max-width:100%"></a>
     <br>
-    <sub>Carsten Packing Company, TPL Cultural Resource Survey (BU-10009), 1977, 
+    <sub>Carsten Packing Company, TPL Cultural Resource Survey (BU-10009), 1977</sub>
     <br> 
-    Courtesy Northwest Room</sub>
+    <sub>Courtesy Tacoma Public Library Northwest Room</sub>
     <br>
     </div>
     <div class="column left" style="background-color:#FFFFFF;">
