--- a/pages/ch.html
+++ b/pages/ch.html
@@ -12,7 +12,7 @@ permalink: /ch.html
      img {
   width: 600px;
   height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 * {
   box-sizing: border-box;
@@ -52,36 +52,60 @@ permalink: /ch.html
 </head>
 <body>
 
-<div class="row">
-  <div class="column left" style="background-color:#FFFFFF;">
-    <h4><p><b>Everett Phipps Babcock</b></p></h4>
-    <br>
-    <em>1874-1928</em>
-    <br>
-    <br>
-    <p>Lost Tacoma Locations: <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA">Pacific Savings and Loan</a></p>
-    <br>
-    <p>Everett Phipps Babcock was born in Tacoma and worked primarily with Ambrose James Russell as Russell & Babcock. In addition to the residences listed below, Babcock also built his own residence for his wife Clara on American Lake named "The Totem Pole." Babcock died suddenly after a routine tonsil removal operation in Pasadena, California.</p>
-    <br>
-    <p>Other Work: 
-    <br>
-    <a href="https://cdm16786.contentdm.oclc.org/digital/collection/ayp/id/487">Masonic Building, Alaska Yukon Pacific Exposition, Seattle, 1909</a>
-    <br> 
-    <a href="https://pcad.lib.washington.edu/building/21858/">Perkins Building, Downtown, Tacoma, WA (1906-1907)</a> 
-    <br>
-    <a href="https://www.historylink.org/File/9048">State of Washington, Governor's Mansion, Olympia, WA (1908)</a> </p>
-    <br>
-    <sub>Sources: “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - May 30, 1908”“Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 4, 1908”, “Tacoma Daily News (Published as THE TACOMA DAILY NEWS) - July 24, 1909”, “Los Angeles Times - May 17, 1928 - Page A10,”</sub>
-    <br>
+  <div class="row">
+    <div class="column left" style="background-color:#FFFFFF;">
+      <h4><p><b>City Hall - Proposed</b></p></h4>
+      <br>
+      <em>February 1, 1937</em>
+      <br>
+      <br>
+      <p>Address: <a href="https://aweymo.github.io/losttacoma/browse.html#1502-24%20BROADWAY%2C%20TACOMA">1502-24 BROADWAY, TACOMA</a></p>
+      <br>
+      <p>Eight technical drawings for a proposed but unbuilt City Hall building, created by George Ekvall on February, 1937. Public Utilities Commissioner Ira S. Davisson requested the plans but they were rejected by the City Council three months later.</p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/ekvall.html"><img src="https://aweymo.github.io/losttacoma/objects/p_ekvall.jpeg" alt="George L. Ekvall" style="max-width:100%;"></a>
+      <br>
+      <sub>George Ekvall</sub>
+      <br>
+      <sub>Courtesy Washington State Department of Architectural Licensing</sub>
+      <br>
     </div>
-  <div class="column right" style="background-color:#FFFFFF;">
-    <a href="https://aweymo.github.io/losttacoma/browse.html#1102-04 PACIFIC AVE, TACOMA"><img src="https://aweymo.github.io/losttacoma/objects/ ext_pacific_savings" alt="Pacific Savings and Loan" style="max-width:100%;"></a>
-    <br>
-    <sub>Pacific Savings and Loan, TPL Historic Building Files (BU-11000), 11-04-1928, 
-    <br>
-    Courtesy Northwest Room</sub>
+    <div class="column left" style="background-color:#FFFFFF;">
+      <p>Technical Drawings: 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt029">Sheet 1</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt030">Sheet 2</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt031">Sheet 3</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt032">Sheet 4</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt033">Sheet 5</a> 
+      <br> 
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt034">Sheet 6</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt035">Sheet 7</a> 
+      <br>
+      <a href="https://aweymo.github.io/losttacoma/item.html?id=lt036">Sheet 8</a> 
+      <br> 
+      </p>
+      <br>
+      </div>
+    <div class="column right" style="background-color:#FFFFFF;">
+      <a href="https://aweymo.github.io/losttacoma/ekvall.html"><img src="https://aweymo.github.io/losttacoma/objects/b_davisson.jpeg" 
+        alt="Ira L. Davisson, seated, Utilities Commissioner and Acting Mayor during the illness of Mayor Siegle, helps the Young Men's Business Club boost Tacoma by purchasing poster stamps of Tacoma and nearby scenes." style="max-width:100%;"></a>
+      <br>
+      <sub>Ira L. Davisson (seated)</sub>
+      <br>
+      <sub>Photo by Richards Studio (D8059-1), 1939-03-28</sub>
+      <br>
+      <sub>Courtesy Tacoma Public Library Northwest Room</sub>
+      <br>
+    </div>
   </div>
-</div>
   
 </body>
 </html>
