--- a/pages/arlington.html
+++ b/pages/arlington.html
@@ -63,6 +63,10 @@ permalink: /arlington.html
       <br>
       <p>One of 32 technical drawings created for this property by Hill Mock & Griffin on April 18, 1924. These records appear to be rejected plans for the school during the bidding process.</p>
       <br>
+      <p>Technical Drawings: 
+        <br>
+        <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005">Sheet 1-7</a>
+        <br> </p>
       </div>
     <div class="column right" style="background-color:#FFFFFF;">
       <a href="https://aweymo.github.io/losttacoma/item.html?id=lt005"><img src="https://aweymo.github.io/losttacoma/objects/ ext_arlington" alt="Arlington Elementary School Addition" style="max-width:100%;"></a>
